Semana 04 - Box model

--- a/clase_04/index.html
+++ b/clase_04/index.html
@@ -36,6 +36,32 @@
         <section id="grafico">
             <h2>Diseño  <span>Gráfico</span> </h2>
 
+            <div class="box">
+                <img src="images/diseno.jpg" alt="foto 1">
+                <h4> Diseño 1</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a href="#" class="btn">Detalles</a>
+            </div>
+  
+            <div class="box">
+                <img src="images/diseno.jpg" alt="foto 1">
+                <h4> Diseño 2</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a href="#" class="btn">Detalles</a>
+            </div>
+            <div class="box">
+                <img src="images/diseno.jpg" alt="foto 1">
+                <h4> Diseño 3</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a href="#" class="btn">Detalles</a>
+            </div>
+
             <div>
                 <p class="importante"> texto importante!</p>
                 <p>
@@ -47,7 +73,10 @@
                 </p>
             </div>
             <div>
-                <img src="images/diseno.jpg" alt="Diseño Gráfico">
+                <img src="images/diseno.jpg" alt="Diseño Gráfico" width="200">
+                <img src="images/diseno.jpg" alt="Diseño Gráfico" width="200">
+                <img src="images/diseno.jpg" alt="Diseño Gráfico" width="200">
+
             </div>
 
             
