--- a/clase_08/index.html
+++ b/clase_08/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Card</h1>
+        <h1>Card con Flexbox y Box model</h1>
     </header>
     <main>
         <div class="card">
