--- a/clase_08/index.html
+++ b/clase_08/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="card">
             <div class="header">
-                <img src="avatar.png" alt="Avatar" class="avatar">
+                <img src="user.jpg" alt="Avatar" class="avatar">
                 <div class="info">
                     <h2 class="name">Sebastian Ruiz</h2>
                     <p class="title">Diseñador Gráfico</p>
